[gd_scene load_steps=8 format=3 uid="uid://cb68rivh3ijpl"]

[ext_resource type="Texture2D" uid="uid://bunlrqupmbo1p" path="res://assets/gfx/slimeball_64.png" id="1"]
[ext_resource type="Texture2D" uid="uid://caha47e7erhfk" path="res://assets/gfx/slimeball_80.png" id="2"]
[ext_resource type="Texture2D" uid="uid://suhir6w4ts8b" path="res://assets/gfx/slimeball_40.png" id="3"]
[ext_resource type="Texture2D" uid="uid://bfrdp5s4oymgn" path="res://assets/gfx/slimeball_100.png" id="4"]
[ext_resource type="Texture2D" uid="uid://ctgihg0kradro" path="res://assets/gfx/slimeball_51.png" id="5"]
[ext_resource type="Script" path="res://scripts/wormie.gd" id="6"]

[sub_resource type="CircleShape2D" id="1"]
radius = 11.9102

[node name="Wormie" type="Node2D"]
script = ExtResource("6")

[node name="Parts" type="Node2D" parent="."]

[node name="Sprite5" type="Sprite2D" parent="Parts"]
position = Vector2(48, 0)
texture = ExtResource("3")

[node name="Sprite4" type="Sprite2D" parent="Parts"]
position = Vector2(38, 0)
texture = ExtResource("5")

[node name="Sprite3" type="Sprite2D" parent="Parts"]
position = Vector2(28, 0)
texture = ExtResource("1")

[node name="Sprite2" type="Sprite2D" parent="Parts"]
position = Vector2(18, 0)
texture = ExtResource("2")

[node name="Sprite1" type="Sprite2D" parent="Parts"]
texture = ExtResource("4")

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
shape = SubResource("1")
